// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`decoration Decoration * overflow 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "decos": [
          "*-10",
        ],
        "nodes": [
          {
            "raw": "11*",
            "text": "11*",
            "type": "plain",
          },
        ],
        "raw": "[*********** 11*]",
        "rawDecos": "***********",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
]
`;

exports[`decoration Decoration similar with externalLink 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "decos": [
          "*-1",
        ],
        "nodes": [
          {
            "raw": "hoge ",
            "text": "hoge ",
            "type": "plain",
          },
          {
            "content": "",
            "href": "https://example.com",
            "pathType": "absolute",
            "raw": "https://example.com",
            "type": "link",
          },
        ],
        "raw": "[* hoge https://example.com]",
        "rawDecos": "*",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
]
`;

exports[`decoration Decoration with hashTag 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "decos": [
          "*-1",
        ],
        "nodes": [
          {
            "href": "tag",
            "raw": "#tag",
            "type": "hashTag",
          },
        ],
        "raw": "[* #tag]",
        "rawDecos": "*",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
]
`;

exports[`decoration Decoration with icon notation 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "decos": [
          "*-1",
        ],
        "nodes": [
          {
            "path": "progfay",
            "pathType": "relative",
            "raw": "[progfay.icon]",
            "type": "icon",
          },
        ],
        "raw": "[* [progfay.icon]]",
        "rawDecos": "*",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
]
`;

exports[`decoration Decoration with many [ 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "decos": [
          "!",
        ],
        "nodes": [
          {
            "raw": "[[[[[[a",
            "text": "[[[[[[a",
            "type": "plain",
          },
        ],
        "raw": "[! [[[[[[a]",
        "rawDecos": "!",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
]
`;

exports[`decoration Decoration with many [ and link 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "decos": [
          "!",
        ],
        "nodes": [
          {
            "raw": "[[[[[",
            "text": "[[[[[",
            "type": "plain",
          },
          {
            "content": "",
            "href": "a",
            "pathType": "relative",
            "raw": "[a]",
            "type": "link",
          },
        ],
        "raw": "[! [[[[[[a]]",
        "rawDecos": "!",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
]
`;

exports[`decoration Decoration with strong icon notation (it's just icon, not strong) 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "decos": [
          "*-1",
        ],
        "nodes": [
          {
            "raw": "[",
            "text": "[",
            "type": "plain",
          },
          {
            "path": "progfay",
            "pathType": "relative",
            "raw": "[progfay.icon]",
            "type": "icon",
          },
        ],
        "raw": "[* [[progfay.icon]]",
        "rawDecos": "*",
        "type": "decoration",
      },
      {
        "raw": "]",
        "text": "]",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;

exports[`decoration Decoration with strong image notation (it's just image, not strong) 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "decos": [
          "*-1",
        ],
        "nodes": [
          {
            "raw": "[",
            "text": "[",
            "type": "plain",
          },
          {
            "link": "",
            "raw": "[https://example.com/image.png]",
            "src": "https://example.com/image.png",
            "type": "image",
          },
        ],
        "raw": "[* [[https://example.com/image.png]]",
        "rawDecos": "*",
        "type": "decoration",
      },
      {
        "raw": "]",
        "text": "]",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;

exports[`decoration Decoration with strong notation (it's just link) 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "decos": [
          "*-1",
        ],
        "nodes": [
          {
            "raw": "[",
            "text": "[",
            "type": "plain",
          },
          {
            "content": "",
            "href": "link",
            "pathType": "relative",
            "raw": "[link]",
            "type": "link",
          },
        ],
        "raw": "[* [[link]]",
        "rawDecos": "*",
        "type": "decoration",
      },
      {
        "raw": "]",
        "text": "]",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;

exports[`decoration Simple decoration 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "decos": [
          "*-1",
        ],
        "nodes": [
          {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[* deco]",
        "rawDecos": "*",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  {
    "indent": 0,
    "nodes": [
      {
        "decos": [
          "*-2",
        ],
        "nodes": [
          {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[** deco]",
        "rawDecos": "**",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  {
    "indent": 0,
    "nodes": [
      {
        "decos": [
          "*-3",
        ],
        "nodes": [
          {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[*** deco]",
        "rawDecos": "***",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  {
    "indent": 0,
    "nodes": [
      {
        "decos": [
          "*-4",
        ],
        "nodes": [
          {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[**** deco]",
        "rawDecos": "****",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  {
    "indent": 0,
    "nodes": [
      {
        "decos": [
          "*-5",
        ],
        "nodes": [
          {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[***** deco]",
        "rawDecos": "*****",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  {
    "indent": 0,
    "nodes": [
      {
        "decos": [
          "*-6",
        ],
        "nodes": [
          {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[****** deco]",
        "rawDecos": "******",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  {
    "indent": 0,
    "nodes": [
      {
        "decos": [
          "*-7",
        ],
        "nodes": [
          {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[******* deco]",
        "rawDecos": "*******",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  {
    "indent": 0,
    "nodes": [
      {
        "decos": [
          "*-8",
        ],
        "nodes": [
          {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[******** deco]",
        "rawDecos": "********",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  {
    "indent": 0,
    "nodes": [
      {
        "decos": [
          "*-9",
        ],
        "nodes": [
          {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[********* deco]",
        "rawDecos": "*********",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  {
    "indent": 0,
    "nodes": [
      {
        "decos": [
          "*-10",
        ],
        "nodes": [
          {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[********** deco]",
        "rawDecos": "**********",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  {
    "indent": 0,
    "nodes": [
      {
        "decos": [
          "!",
        ],
        "nodes": [
          {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[! deco]",
        "rawDecos": "!",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  {
    "indent": 0,
    "nodes": [
      {
        "decos": [
          """,
        ],
        "nodes": [
          {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[" deco]",
        "rawDecos": """,
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  {
    "indent": 0,
    "nodes": [
      {
        "decos": [
          "#",
        ],
        "nodes": [
          {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[# deco]",
        "rawDecos": "#",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  {
    "indent": 0,
    "nodes": [
      {
        "decos": [
          "%",
        ],
        "nodes": [
          {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[% deco]",
        "rawDecos": "%",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  {
    "indent": 0,
    "nodes": [
      {
        "decos": [
          "&",
        ],
        "nodes": [
          {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[& deco]",
        "rawDecos": "&",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  {
    "indent": 0,
    "nodes": [
      {
        "decos": [
          "'",
        ],
        "nodes": [
          {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[' deco]",
        "rawDecos": "'",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  {
    "indent": 0,
    "nodes": [
      {
        "decos": [
          "(",
        ],
        "nodes": [
          {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[( deco]",
        "rawDecos": "(",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  {
    "indent": 0,
    "nodes": [
      {
        "decos": [
          ")",
        ],
        "nodes": [
          {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[) deco]",
        "rawDecos": ")",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  {
    "indent": 0,
    "nodes": [
      {
        "decos": [
          "+",
        ],
        "nodes": [
          {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[+ deco]",
        "rawDecos": "+",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  {
    "indent": 0,
    "nodes": [
      {
        "decos": [
          ",",
        ],
        "nodes": [
          {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[, deco]",
        "rawDecos": ",",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  {
    "indent": 0,
    "nodes": [
      {
        "decos": [
          "-",
        ],
        "nodes": [
          {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[- deco]",
        "rawDecos": "-",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  {
    "indent": 0,
    "nodes": [
      {
        "decos": [
          ".",
        ],
        "nodes": [
          {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[. deco]",
        "rawDecos": ".",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  {
    "indent": 0,
    "nodes": [
      {
        "decos": [
          "/",
        ],
        "nodes": [
          {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[/ deco]",
        "rawDecos": "/",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  {
    "indent": 0,
    "nodes": [
      {
        "decos": [
          "{",
        ],
        "nodes": [
          {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[{ deco]",
        "rawDecos": "{",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  {
    "indent": 0,
    "nodes": [
      {
        "decos": [
          "|",
        ],
        "nodes": [
          {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[| deco]",
        "rawDecos": "|",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  {
    "indent": 0,
    "nodes": [
      {
        "decos": [
          "}",
        ],
        "nodes": [
          {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[} deco]",
        "rawDecos": "}",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  {
    "indent": 0,
    "nodes": [
      {
        "decos": [
          "<",
        ],
        "nodes": [
          {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[< deco]",
        "rawDecos": "<",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  {
    "indent": 0,
    "nodes": [
      {
        "decos": [
          ">",
        ],
        "nodes": [
          {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[> deco]",
        "rawDecos": ">",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  {
    "indent": 0,
    "nodes": [
      {
        "decos": [
          "_",
        ],
        "nodes": [
          {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[_ deco]",
        "rawDecos": "_",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
  {
    "indent": 0,
    "nodes": [
      {
        "decos": [
          "~",
        ],
        "nodes": [
          {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[~ deco]",
        "rawDecos": "~",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
]
`;
